@@ -30,7 +30,7 @@ h2 {
   font-size: 150%;
 }
 
-h3 {
+h3, th {
   font-weight: bolder;
   font-family: sans-serif;
   font-size: 100%;
@@ -137,6 +137,15 @@ q:before, q:after {
   background-repeat: no-repeat;
 }
 
+#levels-table tbody th:first-child {
+  padding-left: 42px;
+  min-height: 32px;
+  background-image: url(large-stop);
+  background-position: 5px center;
+  background-repeat: no-repeat;
+  text-align: left;
+}
+
 #identifiers dd, #terms dd {
   margin-left: 20px;
   padding-left: 20px;
@@ -155,8 +164,12 @@ q:before, q:after {
 }
 
 #document-errors dd.should, #error-description .should h3,
-#result-para.SEE-RESULT {
+#result-para.SEE-RESULT, #levels-table #level-s th {
   background-image: url(large-alert);
+}
+
+#levels-table #level-w th {
+  background-image: url(large-info);
 }
 
 #document-errors dd.unsupported {
@@ -166,7 +179,7 @@ q:before, q:after {
 }
 
 #document-errors dd.unsupported, #error-description .unsupported h3,
-#result-para.uncertain {
+#result-para.uncertain, #levels-table #level-unsupported th {
   background-image: none;
 }
 
@@ -250,22 +263,22 @@ code {
   empty-cells: show;
 }
 
-.uncertain td, p.uncertain {
+.uncertain td, p.uncertain, #level-unsupported, #level-unsupported th {
   background-color: #e1e1ff;
   color: black;
 }
 
-.FAIL, .uncertain td.FAIL {
+.FAIL, .uncertain td.FAIL, #level-m, #level-m th {
   background-color: #ffcece;
   color: black;
 }
 
-.SEE-RESULT, .uncertain td.SEE-RESULT {
+.SEE-RESULT, .uncertain td.SEE-RESULT, #level-s, #level-s th {
   background-color: #e1e1ff;
   color: black;
 }
 
-.PASS {
+.PASS, #level-w, #level-w th {
   background-color: #ddffdd;
   color: black;
 }
@@ -310,6 +323,6 @@ Copyright 2007 Wakaba <w@suika.fam.cx>.
 This library is free software; you can redistribute it
 and/or modify it under the same terms as Perl itself.
 
-$Date: 2007/11/04 09:15:02 $
+$Date: 2007/11/05 09:33:52 $
 
 */
